@@ -149,18 +149,6 @@ struct MemoryTree
 
 /****************************************************************************/
 
-struct LocalVariable
-{
-	struct LocalVariable *	lv_Next;
-	char *					lv_Name;
-};
-
-/****************************************************************************/
-
-extern struct LocalVariable * NOCOMMON __lv_root;
-
-/****************************************************************************/
-
 extern unsigned NOCOMMON __random_seed;
 
 /****************************************************************************/
