@@ -1,3 +1,8 @@
+- Moved the environment variable cleanup code into a destructor function.
+
+- Fixed a typo in the hstrerror() function.
+
+
 c.lib 1.184 (28.11.2004)
 
 - Added asctime_r(), ctime_r(), gmtime_r(), localtime_r() and strtok_r().
